--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sofr",
-  "version": "1.0.0",
+  "version": "1.0.31",
   "description": "sofr React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -18,7 +18,12 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
+  },
   "peerDependencies": {
     "react": "16.x"
   },
